# L3 network layer (specs/l3.md): addressing, the controller-driven discovery walk, source-learned
# multi-hop forwarding, and CONFIG_* (the wire face of the store). HAL-free board-side logic over L2's
# send / poll_recv; the firmware wires it to real links. no_std, no alloc.
[package]
name = "net"
version = "0.1.0"
edition = "2021"
description = "L3 network layer: the [opcode][src][dst][payload] PDU codec, source-learned forwarding (port_toward table, unknown-dst flood, split-horizon, hop limit), the controller-driven discovery/address-assignment walk, and CONFIG_* over the store Key/Value. no_std, HAL-free, over crates/link's L2."

[dependencies]
# `store` (slice 4+): the walk persists `node_address` and `CONFIG_*` reads/writes the Key/Value store.
# `heapless` (slice 4+): bounded emission/work-queue buffers in the walk, no alloc.
store = { path = "../store" }
heapless = "0.8"

[dev-dependencies]
# The walk's Tier-1 host harness routes PDUs over real L2 mock links (`link::Link` over a mock
# `Transport`) and persists to a small in-test mock flash (`base::error::FlashError` + `store`'s
# `Flash` trait), exercising the L2 seam.
link = { path = "../link" }
base = { path = "../base" }
