# Standalone 250 Hz cooperative scheduler crate (specs/sensing-and-safety.md, "The scheduler
# contract"): a fixed 20-slot task table whose tick handler advances per-slot down-counters and
# marks tasks due, plus a main-loop dispatch pass that runs every due task in ascending slot order.
# Pure logic, no hardware, no_std, host-testable; identical on every fleet part.
[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "250 Hz cooperative outer-task scheduler: fixed 20-slot task table, per-slot down-counters, tick advance, ascending-slot dispatch. Pure logic, no_std, host-testable."

[dependencies]
